--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,10 @@
     "lib": [
       "es2018",
       "dom"
-    ]
-  }
+    ],
+    "strict": true
+    // "noImplicitAny": true
+  },
+  "fullTemplateTypeCheck":true,
+  "strictTemplates":true
 }
